# k8s-fastapi-istio-

./: AGENT.md  README.md
apps/webapp1/: Dockerfile  pyproject.toml
apps/webapp1/app/: main.py
apps/webapp1/app/api/v1/: users.py
apps/webapp1/app/core/: config.py
apps/webapp1/app/models/: user.py
apps/webapp1/app/services/: user_service.py
apps/webapp1/tests/api/v1/: test_users.py
apps/webapp1/tests/unit/: test_user_service.py
apps/webapp2/: Dockerfile  pyproject.toml
apps/webapp2/app/: main.py
apps/webapp2/app/api/v1/: items.py
apps/webapp2/app/core/: config.py  logging.py
apps/webapp2/app/models/: item.py
apps/webapp2/app/services/: item_service.py
apps/webapp2/tests/api/v1/: test_items.py
apps/webapp2/tests/unit/: test_item_service.py
helm/webapp1/: Chart.yaml  values.yaml
helm/webapp1/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
helm/webapp2/: Chart.yaml  values.yaml
helm/webapp2/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
istio/: authorizationpolicies.yaml  gateway.yaml  install.sh  peerauthentications.yaml  virtualservices.yaml
