[project]
name = "webapp1"
version = "1.0.0"
description = "WebApp1 FastAPI service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.0.0",
  "pydantic>=2.12.5",
  "httpx>=0.28.1",
  "pytest>=9.0.3",
]

[tool.uvicorn]
factory = false

[tool.pytest.ini_options]
pythonpath = ["app", "."]
testpaths = ["tests"]
